cluster/homelab/apps/ojwan/calculon/signup/endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: signup
  namespace: ojwan
subsets:
  - addresses:
      - ip: 10.27.10.3
    ports:
      - name: signup-port
        protocol: TCP
        port: 8056
