cluster/homelab/apps/ojwan/calculon/signup/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: signup
  namespace: ojwan
spec:
  ports:
    - name: signup-port
      port: 8056
      targetPort: 8056
      protocol: TCP
